# carnage

./: LICENSE  README.md  prek.toml  pyproject.toml  pyrefly.toml  ruff.toml
assets/: carnage.desktop
carnage/: __init__.py  __main__.py  main.py
carnage/core/: __init__.py  args.py  cache.py  commands.py  commands_config.py  config.py  emerge.py  glsas.py  lock.py  news.py  notifications.py  operation.py  overlays.py  privilege.py  process.py  unix.py  use.py
carnage/core/eix/: __init__.py  eix.py  overlay.py  search.py  use.py
carnage/core/gentoolkit/: eclean.py  euse.py  flag.py  package.py
carnage/core/portage/: emerge.py  glsas.py  news.py  overlays.py  portageq.py  use.py
carnage/tui/: app.py  commands.py  styles.tcss
carnage/tui/screens/: main.py  main_screen.py  main_scrn.py
carnage/tui/styles/: compact.tcss  styles.tcss
carnage/tui/widgets/: browse_tab.py  cachetabbedcontent.py  glsa_tab.py  news_tab.py  overlay_tab.py  table.py  use_tab.py
carnage/tui/widgets/browse/: browse_tab.py  package_detail.py
docs/: carnage.1.md  man.carnage.md
man/: carnage.1
src/: __init__.py
src/core/: __init__.py  cache.py  glsas.py  news.py  overlays.py
src/core/eix/: eix.py  search.py
src/tui/: app.py  styles.tcss
src/tui/screens/: main.py
src/tui/widgets/: news_tab.py
