[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "carnage"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
dynamic = ["version", "description"]
dependencies = [
    "lxml>=6.0.2",
    "msgpack>=1.1.2",
    "portage>=3.0.77",
    "textual>=8.0.0",
    "tomlkit>=0.14.0",
    "gentoolkit @ git+https://codeberg.org/gentoo/gentoolkit.git@gentoolkit-0.7.1",
    "platformdirs>=4.9.6",
]

[dependency-groups]
dev = [
    "pyrefly>=0.50.0",
    "msgpack-types>=0.7.0",
    "textual-dev>=1.8.0",
    "ruff>=0.15.10",
    "prek>=0.3.9",
]

[project.scripts]
carnage = "carnage.main:main"

[project.optional-dependencies]
notifications = [
    "desktop-notifier>=6.1.0",
]

[tool.pyrefly]
python-version = "3.14"
python-interpreter = ".venv/bin/python3"